# ros2_action_recognition

./: CMakeLists.txt  README.md  package.xml
config/: action_recognition.yaml  stgcn.yaml
launch/: action_recognition.launch.py
msg/: Action.msg  ActionArray.msg
src/: action_recognition_node.cpp
